# booking.com

./: .gitignore  README.md  main.py  pyproject.toml
data/: booking.sqlite  html_for_soup.txt  html_for_soup2.txt
utils/: util.py  util_selenium.py
