[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
bs4 = "^0.0.1"
pandas = "^2.1.4"
fake-useragent = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
